// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`debts.addBatch > functionality > debts are added - autogenerated timestamp 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.debts VALUES ('845cb5ab-842b-4fa9-acbf-1a759ff393a4', 'a4211316-9cb2-4005-b661-283ef7f1cf45', '354b1a6f-df84-4caf-9e40-14e29dd617ee', 'NOK', -907.8400, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'debitis culpa ea', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('5b7ab2ba-be55-4771-8cd0-24e8fe338bd6', 'a4211316-9cb2-4005-b661-283ef7f1cf45', '9dfe9df8-4ed0-4d14-904b-75ddf3bab1a8', 'EGP', 855.3800, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'occaecati ut minus', '2020-01-01 00:00:00', NULL);"
`;

exports[`debts.addBatch > functionality > debts are added - some are auto-accepted by the counterparty 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.debts VALUES ('6b8c3687-6276-48ef-b194-295365be669a', '4adfd369-72a9-4631-903a-3353c3e5dba5', '4670ef39-264b-4f7e-bfeb-13962a4e383c', 'BYN', -696.3300, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'distinctio cupiditate dolorem', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('caffcfe2-fdb5-4e5a-8f19-f45b76e51e15', '4adfd369-72a9-4631-903a-3353c3e5dba5', '4670ef39-264b-4f7e-bfeb-13962a4e383c', 'PEN', 734.4000, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'placeat repellendus aperiam', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('f703d7a1-1162-440f-96e3-cddb7688bc47', '1c1913a2-358a-42cf-96c1-97c9a12923e1', '207afcd4-1bbf-4956-ac87-539df7c576e1', 'TND', 182.2700, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'iure laboriosam quas', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('6b8c3687-6276-48ef-b194-295365be669a', 'b931b7cd-0bbb-4668-be2c-f59cfdecfddb', 'e8537d1e-2f77-4a92-b31e-4188c399be5a', 'BYN', 696.3300, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'distinctio cupiditate dolorem', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('caffcfe2-fdb5-4e5a-8f19-f45b76e51e15', 'b931b7cd-0bbb-4668-be2c-f59cfdecfddb', 'e8537d1e-2f77-4a92-b31e-4188c399be5a', 'PEN', -734.4000, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'placeat repellendus aperiam', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('f703d7a1-1162-440f-96e3-cddb7688bc47', 'b931b7cd-0bbb-4668-be2c-f59cfdecfddb', '465229c7-e6a6-486b-a6bb-7ce4792a7b4b', 'TND', -182.2700, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'iure laboriosam quas', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('3fb62100-8408-48de-bb3a-f1e3f899ef83', 'b931b7cd-0bbb-4668-be2c-f59cfdecfddb', 'a61eabf7-3766-45cc-884e-962e538d734c', 'SOS', -990.0300, '2020-01-01 00:00:00', '2020-01-01 00:00:00', 'a ad omnis', '2020-01-01 00:00:00', NULL);"
`;

exports[`debts.addBatch > functionality > debts are added - user-provided timestamp 1`] = `
"Snapshot Diff:
- Before snapshot
+ After snapshot

@@ --- --- @@
+ INSERT INTO public.debts VALUES ('90d46bf0-67b1-4316-8673-7e3dc542b214', '26f5cb66-86fe-4a60-a7f2-466dbfbb1eab', 'b6206d08-839d-49f4-8930-608654e73331', 'XAF', 155.4300, '2021-01-01 00:00:00', '2020-01-01 00:00:00', 'aut sint libero', '2020-01-01 00:00:00', NULL);
+ INSERT INTO public.debts VALUES ('abf6352d-3dfa-4796-87e4-2596648a6962', '26f5cb66-86fe-4a60-a7f2-466dbfbb1eab', 'b6f5e4b3-3e29-449f-b7c8-67a82910dedc', 'HKD', -37.9300, '2021-01-01 00:00:00', '2020-01-01 00:00:00', 'inventore occaecati voluptas', '2020-01-01 00:00:00', NULL);"
`;
